<resources>
    <string name="app_name">Servicios Cloud</string>
    <string name="lblTitle">Cloud Firebase + Twilio SMS</string>
    <string name="lblName">Nombre:</string>
    <string name="hntName">Escribe tu nombre</string>
    <string name="lblSender">Tu número:</string>
    <string name="hntSender">Escribe tu número</string>
    <string name="lblReceiver">Número destino:</string>
    <string name="hntReceiver">Escribe el número destino</string>
    <string name="lblMessage">Mensaje:</string>
    <string name="hntMessage">Escribe el mensaje</string>
    <string name="txtButton">Enviar Mensaje</string>
    <string name="title_activity_emailpassword">activity_emailpassword</string>

    <string name="next">Guardar</string>
    <string name="previous">Regresar</string>

    <string name="UserRegister">Registro de Usuario</string>
    <string name="UserUpdate">Actualizar Usuario. Arg: %1$s</string>


    <!--string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <!--string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>

    <string name="label_multi_factor">Multi-Factor Authentication</string>
    <string name="desc_multi_factor">Use SMS for two-factor authentication. Note: this feature is only available for Cloud Identity Platform.</string-->

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">LogIn</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">LogOut</string>
    <string name="enviarSMS">SMS</string>
    <string name="disconnect">Desconectar</string>
    <string name="loading">Cargando…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Logueado</string>
    <string name="signed_out">Deslogueado</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authenticación falló</string>
    <string name="start_phone_auth">Iniciar</string>
    <string name="verify_phone_auth">Verificar</string>
    <string name="resend_phone_auth">Renviar</string>
    <string name="hint_phone_number">Num. Celular</string>
    <string name="hint_verification_code">Cód. Verificación</string>
    <string name="status_code_sent">Code Enviado</string>
    <string name="status_verification_failed">Verificación falló</string>
    <string name="status_verification_succeeded">Verificaciión exitosa</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="tvTitulo">Attentionfy</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Num. Celular</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="enroll_mfa">Enroll MFA</string>
    <string name="unenroll_mfa">Unenroll MFA</string>
    <string name="new_appointment">Cita</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>

</resources>