<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTitle"
        android:textSize="25dp"
        android:textColor="#E4673F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    //BEGIN: Campo Name

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#040303"
        android:layout_marginTop="30dp"
        android:text="@string/lblName"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtName"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginTop="7dp"
        android:hint="@string/hntName"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />
    //END: Campo Name


    //BEGIN: Campo SenderNumber

    <TextView
        android:id="@+id/tvSenderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#040303"
        android:layout_marginTop="50dp"
        android:text="@string/lblSender"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/edtSenderNumber"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginTop="7dp"
        android:hint="@string/hntSender"
        android:inputType="phone"
        android:textSize="14sp"
        android:text="7126616182"
        app:layout_constraintStart_toStartOf="@+id/tvSenderNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvSenderNumber" />
    //END: Campo SenderNumber


    //BEGIN: Campo ReceiverNumber

    <TextView
        android:id="@+id/tvReceiverNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#040303"
        android:layout_marginTop="50dp"
        android:text="@string/lblReceiver"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvSenderNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvSenderNumber"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/edtReceiverNumber"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginTop="7dp"
        android:hint="@string/hntReceiver"
        android:inputType="phone"
        android:text="8114216460"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvReceiverNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvReceiverNumber" />
    //END: Campo ReceiverNumber


    //BEGIN: Campo Message
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#040303"
        android:layout_marginTop="50dp"
        android:text="@string/lblMessage"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReceiverNumber"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/edtMessage"
        android:layout_width="328dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:gravity="top"
        android:hint="@string/hntMessage"
        android:text="Hey, "
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvMessage"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
    //END: Campo Message

    //BEGIN: Campo Message

    //BEGIN: Guidelines

    <TextView
        android:id="@+id/tvRecibido"
        android:layout_width="324dp"
        android:layout_height="22dp"
        android:text="Esperando mensaje entrante.."
        android:textColor="#040303"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintTop_toBottomOf="@+id/edtMessage"
        tools:layout_editor_absoluteX="45dp" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:background="#FFBBAA"
        android:onClick="onSend"
        android:text="@string/txtButton"
        android:textColor="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMessage"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
    //END: Guidelines

</androidx.constraintlayout.widget.ConstraintLayout>